Add DateTime Picker in Request

--- a/app/src/main/res/layout/activity_bene_create.xml
+++ b/app/src/main/res/layout/activity_bene_create.xml
@@ -26,6 +26,7 @@
         android:layout_marginEnd="212dp"
         android:layout_marginBottom="404dp"
         android:background="@null"
+        android:focusable="false"
         android:ems="10"
         android:inputType="date"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,6 +39,7 @@
         android:layout_marginEnd="72dp"
         android:layout_marginBottom="404dp"
         android:background="@null"
+        android:focusable="false"
         android:ems="10"
         android:inputType="time"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -50,6 +52,7 @@
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="140dp"
         android:background="@null"
+        android:hint="E.g. I need 3 egg plants from ShengSiong"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
