--- a/app/src/main/res/layout/activity_volunt_home.xml
+++ b/app/src/main/res/layout/activity_volunt_home.xml
@@ -10,8 +10,8 @@
 
     <ImageButton
         android:id="@+id/vtaskButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="33dp"
+        android:layout_height="34dp"
         android:layout_marginTop="56dp"
         android:layout_marginEnd="56dp"
         android:background="@color/grey"
@@ -21,8 +21,8 @@
 
     <ImageButton
         android:id="@+id/veditProfileButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="38dp"
+        android:layout_height="38dp"
         android:layout_marginTop="56dp"
         android:layout_marginEnd="324dp"
         android:background="@color/grey"
@@ -33,15 +33,14 @@
     <fragment
         android:id="@+id/id_map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="409dp"
+        android:layout_height="297dp"
         android:layout_marginTop="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vtaskButton"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.041" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
