--- a/app/src/main/res/layout/activity_bene_reqsummary.xml
+++ b/app/src/main/res/layout/activity_bene_reqsummary.xml
@@ -19,6 +19,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pendingRecycleV"
+        android:layout_width="343dp"
+        android:layout_height="190dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.552" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
