--- a/app/src/main/res/layout/activity_volunt_home.xml
+++ b/app/src/main/res/layout/activity_volunt_home.xml
@@ -42,5 +42,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.041" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/voluntRecycleV"
+        android:layout_width="343dp"
+        android:layout_height="240dp"
+        android:layout_marginTop="350dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.552" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
