--- a/app/src/main/res/layout/activity_volunt_taskdetails.xml
+++ b/app/src/main/res/layout/activity_volunt_taskdetails.xml
@@ -22,59 +22,85 @@
 
     <TextView
         android:id="@+id/ReqType"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="364dp"
-        android:layout_marginEnd="4dp"
-        android:textColor="@color/black"
-        android:textSize="40dp"
+        android:layout_width="266dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="292dp"
+        android:layout_marginEnd="84dp"
+        android:text="TEST"
+        android:textColor="@color/buttonBlue"
+        android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/dateandtime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="460dp"
-        android:layout_marginEnd="28dp"
-        android:text="DATE"
-        android:textColor="@color/black"
-        android:textSize="20dp"
+        android:id="@+id/reqername"
+        android:layout_width="264dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="372dp"
+        android:layout_marginEnd="84dp"
+        android:text="Erica"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/datime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="516dp"
-        android:layout_marginEnd="4dp"
-        android:textColor="@color/black"
-        android:textSize="20dp"
+        android:id="@+id/reqtelenum"
+        android:layout_width="264dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="436dp"
+        android:layout_marginEnd="84dp"
+        android:text="7575757"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/reqtime"
+        android:layout_width="133dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="488dp"
+        android:layout_marginEnd="68dp"
+        android:text="time here "
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/meetinglocation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="592dp"
-        android:layout_marginEnd="4dp"
-        android:text="MEETING LOCATION"
+        android:id="@+id/reqdate"
+        android:layout_width="140dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="488dp"
+        android:layout_marginEnd="208dp"
+        android:text="time here "
         android:textColor="@color/black"
-        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/initloc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="274dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="544dp"
+        android:layout_marginEnd="76dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/destiLoc"
+        android:layout_width="293dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="608dp"
+        android:layout_marginEnd="56dp"
+        android:text="destination"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/remarks"
+        android:layout_width="333dp"
+        android:layout_height="51dp"
         android:layout_marginTop="664dp"
-        android:layout_marginEnd="4dp"
-        android:textColor="@color/black"
-        android:textSize="20dp"
+        android:layout_marginEnd="16dp"
+        android:text="remarks"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -84,8 +110,8 @@
         android:layout_height="63dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="120dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginEnd="128dp"
+        android:layout_marginBottom="36dp"
         android:backgroundTint="@color/buttonBlue"
         android:text="Accept"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
