--- a/app/src/main/res/layout/pending_items.xml
+++ b/app/src/main/res/layout/pending_items.xml
@@ -22,6 +22,8 @@
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:contentDescription="@string/app_name"
+            android:textStyle="bold"
+            android:textSize="13dp"
             android:padding="5dp"
             android:src="@drawable/doing" />
 
@@ -32,8 +34,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:layout_toEndOf="@id/pendImage"
-            android:textColor="@color/black" />
+            android:textStyle="bold"
+            android:textSize="13dp"
+            android:layout_toEndOf="@id/pendImage" />
 
         <TextView
             android:id="@+id/pendLoc"
@@ -42,8 +45,9 @@
             android:layout_below="@id/pendType"
             android:layout_marginStart="10dp"
             android:layout_marginTop="16dp"
-            android:layout_toEndOf="@id/pendImage"
-            android:drawablePadding="2dp" />
+            android:textStyle="bold"
+            android:textSize="13dp"
+            android:layout_toEndOf="@id/pendImage" />
 
         <TextView
             android:id="@+id/pendDate"
@@ -52,7 +56,8 @@
             android:layout_below="@id/pendLoc"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
-            android:layout_toEndOf="@id/pendImage"
-            android:drawablePadding="2dp" />
+            android:textStyle="bold"
+            android:textSize="13dp"
+            android:layout_toEndOf="@id/pendImage"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
